--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "tallsaas/plaid",
-    "description": "Plaid integration support for TALLSaaS tools.",
+    "name": "tallsaas/budget",
+    "description": "Budget integration support for TALLSaaS tools.",
     "keywords": [
-        "plaid",
+        "Budget",
         "saas",
         "tailwind",
         "alpinejs",
@@ -18,19 +18,20 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.67|^9.0"
+        "illuminate/support": "^8.67|^9.0",
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
-            "TallSaas\\Plaid\\": "src"
+            "TallSaas\\Budget\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "TallSaas\\Plaid\\Tests\\": "tests"
+            "TallSaas\\Budget\\Tests\\": "tests"
         }
     },
     "config": {
@@ -39,7 +40,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "TallSaas\\Plaid\\Providers\\PlaidServiceProvider"
+                "TallSaas\\Budget\\Providers\\BudgetServiceProvider"
             ]
         }
     }
