Getting dashboard foundation up

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "tallsaas/budget",
     "description": "Budget integration support for TALLSaaS tools.",
+    "version": "0.0.1",
     "keywords": [
-        "Budget",
         "saas",
         "tailwind",
         "alpinejs",
@@ -19,7 +19,8 @@
     "require": {
         "php": "^8.0",
         "illuminate/support": "^8.67|^9.0",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3"
